--- a/code-solo.html
+++ b/code-solo.html
@@ -4,14 +4,36 @@
         <title>Code Solo</title>
         <style>
            /* 1. Yeck, the image is way too big. Select the class name `image` and adjust the width to a reasonable size. */
-           
+           .image{
+            width: 40%; 
+           }
            /* 2. Select the body tag and change: the background color to your favorite color and the font color to one that works well with the background. */
+           body{
+            background-color: rgb(121, 3, 238);
+            color: aliceblue;
+           }
+           a{
+            text-decoration: none;
+            color: aliceblue;
+            text-decoration: underline;
+           }
 
            /* 3. Change the background color for the paragraph tags to whatever color you like. */
-
+           p{
+            background-color: rgb(234, 211, 255);
+            color: blueviolet;
+           }
            /* 4. Choose one more html element to change on your page. Change it however you want. */
-
+           h2{
+            font-family: 'Times New Roman', Times, serif;
+           }
+           ol, ul{
+            font-family: fantasy;
+           }
            /* 5. Spicy Task: see if you can align the h1 header to the center of the page. */
+           h1{
+            text-align: center;
+           }
 
         </style>
     </head>
